# simple-unrealgamesync

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  P4-OUTPUT-REFERENCE.md  README.md  index.html  package-lock.json  package.json  vite-plugin-git-changelog.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: git.rs  history.rs  log.rs  mod.rs  sync.rs  workspace.rs
src-tauri/src/models/: history.rs  mod.rs  sync_event.rs  workspace.rs
src-tauri/src/services/: disk_usage_sampler.rs  git_service.rs  history.rs  mod.rs  p4_executor.rs  process_manager.rs  sync_orchestrator.rs  tray_manager.rs  workspace.rs
src-tauri/src/utils/: counting_channel.rs  log.rs  mod.rs  redact.rs  sync_run_log.rs  time.rs
src/components/history/: HistoryTab.tsx  RollbackDialog.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/settings/: SettingsDialog.tsx
src/components/sync/: CompletionSummaryPanel.tsx  ErrorPanel.tsx  GitRunningPanel.tsx  IdlePanel.tsx  LogViewer.tsx  ProgressSection.tsx  RunningPanel.tsx  StepIndicator.tsx  SyncDashboard.tsx  WorkspaceHealthPanel.tsx
src/hooks/: mergeProgress.test.ts  mergeProgress.ts  useBehindCheck.ts  useGit.ts  useHistory.ts  useSync.ts  useUpdater.ts  useWorkspaceHealth.ts  useWorkspaces.ts
src/lib/: commands.ts  groupWarnings.ts  types.ts  updaterProxyTest.ts  updaterSettings.ts
(+13 files in other folders)
