[package]
name = "simple-unrealgamesync"
version = "1.4.1"
edition = "2021"

[lib]
name = "simple_unrealgamesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = { version = "0.4", features = ["release_max_level_debug"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.32"
